
install(FILES

	KDE-Im-Cant-Connect.ogg
	KDE-Im-Connection-Lost.ogg
	KDE-Im-Contact-In.ogg
	KDE-Im-Contact-Out.ogg
	KDE-Im-Error-On-Connection.ogg
	KDE-Im-Highlight-Msg.ogg
	KDE-Im-Internal-Error.ogg
	KDE-Im-Irc-Event.ogg
	KDE-Im-Low-Priority-Message.ogg
	KDE-Im-Message-In.ogg
	KDE-Im-Message-Out.ogg
	KDE-Im-Network-Problems.ogg
	KDE-Im-New-Mail.ogg
	KDE-Im-Phone-Ring.ogg
	KDE-Im-Sms.ogg
	KDE-Im-Nudge.ogg
	KDE-Im-User-Auth.ogg
	KDE-K3B-Finish-Error.ogg
	KDE-K3B-Finish-Success.ogg
	KDE-K3B-Insert-Medium.ogg
	KDE-Sys-App-Positive.ogg
	KDE-Sys-App-Negative.ogg
	KDE-Sys-App-Error-Critial.ogg
	KDE-Sys-App-Error.ogg
	KDE-Sys-App-Error-Serious.ogg
	KDE-Sys-App-Error-Serious-Very.ogg
	KDE-Sys-App-Message.ogg
	KDE-Sys-Error-Printing.ogg
	KDE-Sys-File-Open-Foes.ogg
	KDE-Sys-List-End.ogg
	KDE-Sys-List-Match-Multiple.ogg
	KDE-Sys-List-Match-No.ogg
	KDE-Sys-Log-In-Long.ogg
	KDE-Sys-Log-In.ogg
	KDE-Sys-Log-In-Short.ogg
	KDE-Sys-Log-Out.ogg
	KDE-Sys-Question.ogg
	KDE-Sys-Special.ogg
	KDE-Sys-Trash-Emptied.ogg
	KDE-Sys-Warning.ogg
	KDE-Window-All-Desktops-Not.ogg
	KDE-Window-All-Desktops.ogg
	KDE-Window-Close.ogg
	KDE-Window-Maximize.ogg
	KDE-Window-Minimize.ogg
	KDE-Window-Move.ogg
	KDE-Window-Move-Stop.ogg
	KDE-Window-Shade-Down.ogg
	KDE-Window-Shade-Up.ogg

	DESTINATION  ${SOUND_INSTALL_DIR} )



